--- a/index.html
+++ b/index.html
@@ -39,12 +39,11 @@
   
   <div class="button"><button>Proceed to Payment</button></div>
   <a href="" class="cancel">Cancel Order</a>
-   
-  <!--<div class="attribution">
+  <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div> -->
+    Coded by <a href="#">Adekeye Aishat</a>.
   </div>
-</div>
+    </div>
+  </div>
 </body>
 </html>
